# fastjump

./: .travis.yml  Cargo.toml  Cross.toml  Justfile  README.md  appveyor.yml  build.rs
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: rust.yml  test.yml
ci/: before_install.sh  install.ps1  install.sh  script.cmd  script.sh  test.cmd  test.ps1
scripts/: fastjump.bash  fastjump.fish  fastjump.lua  fastjump.sh  fastjump.tcsh  fastjump.zsh  j.bat
scripts/tests/: install.bash  install.fish  install.sh  test.bash  test.fish  uninstall.bash
src/: database.rs  handlers.rs  lib.rs  main.rs
src/common/: config.rs  match.rs  mod.rs  opts.rs  utils.rs
tests/: integration_test.rs
